--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
 </head>
 <body>
-<video id="video" controls></video>
+<video id="video" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();">Snap</button>
 <button onclick="viewCam();">View</button>
@@ -49,7 +49,7 @@ peer.on('call', function(call) {
 
 	function streamWebCam(stream){
                 video.srcObject = stream;
-		video.play();
+		//video.play();
 	}
 
 	function throwError(e){
