--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -7,8 +7,8 @@
 <body>
 <video id="video" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
-<button onclick="snap();" style="font-size : 20px;>Snap</button>
-<button onclick="viewCam();" style="font-size : 20px;>View</button>
+<button onclick="snap();" style="font-size : 20px";>Snap</button>
+<button onclick="viewCam();" style="font-size : 20px;">View</button>
 
 <script>
 	var video = document.getElementById('video');
