--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -8,7 +8,7 @@
 <video id="video" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();" style="font-size : 20px";>Snap</button>
-<button onclick="viewCam();" style="font-size : 20px;">View</button>
+<button onclick="viewCam();" style="font-size : 20px; margin-left: 30px;">View</button>
 
 <script>
 	var video = document.getElementById('video');
