--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
 </head>
 <body>
-<video id="video" controls autoplay></video>
+<video id="video" width="1280" height="720" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();" style="font-size : 200px; margin-top: 25px;">Snap</button>
 <button onclick="viewCam();" style="font-size : 200px; margin-left: 130px; margin-top: 25px;">View</button>
