--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -3,8 +3,10 @@
 <head>
 	<title>AI CAM VIEWER</title>
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<div id="container">
 <video id="video" width="1280" height="720" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();" style="font-size : 180px; margin-top: 25px;">Snap</button>
@@ -70,5 +72,6 @@ peer.on('call', function(call) {
 		context.drawImage(video,0,0);
 	}
 	</script>
+	</div>
 </body>
 </html>
