--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="container">
-<video id="video" width="1280" height="720" controls autoplay></video>
+<video id="video" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
 <button onclick="snap();" style="font-size : 180px; margin-top: 25px;">Snap</button>
 <button onclick="viewCam();" style="font-size : 180px; margin-left: 130px; margin-top: 25px;">View</button>
