--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -9,3 +9,18 @@ body {
 margin: 0 auto;
 width: 1280px;
 }
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  body {
+  background-color: lightblue;
+}
+
+#container{
+}
+
+#video{
+margin: 0 auto;
+width: 1280px;
+}
+}
