--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -1,13 +1,17 @@
 body {
-  background-color: lightblue;
+  
 }
 
 #container{
+  
 }
 
 #video{
 margin: 0 auto;
 width: 640px;
+}
+#toolbar{
+  
 }
 
 @media only screen and (min-width: 768px) {
@@ -23,4 +27,8 @@ width: 640px;
 margin: 0 auto;
 width: 1280px;
 }
+#toolbar{
+  
+}  
+  
 }
