--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -9,10 +9,10 @@
 	<div id="container">
 <video id="video" controls autoplay></video>
 <canvas id="canvas"></canvas><br>
-		<div id="toolbar">
-<button onclick="snap();" style="font-size : 180px; margin-top: 25px;">Snap</button>
-<button onclick="viewCam();" style="font-size : 180px; margin-left: 130px; margin-top: 25px;">View</button>
-			</div>
+<div id="toolbar">
+<button onclick="snap();">Snap</button>
+<button onclick="viewCam();">View</button>
+</div>
 
 <script>
 	var video = document.getElementById('video');
