--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -9,9 +9,11 @@ body {
 #video{
 margin: 0 auto;
 width: 100%;
+background-color: black;
 }
 #toolbar{
-  margin-top: 25px;
+  margin-top: 10px;
+  background-color: gray;
 }
 button{
   font-size : 180px;
