--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -15,6 +15,11 @@ background-color: black;
   margin-top: 10px;
   background-color: gray;
 }
+#canvas{
+margin: 0 auto;
+width: 100%;
+background-color: black;
+}
 button{
   font-size : 180px;
 }
