--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -19,6 +19,7 @@ background-color: black;
 margin: 0 auto;
 width: 100%;
 background-color: black;
+display: none;
 }
 button{
   font-size : 180px;
