--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -72,6 +72,7 @@ peer.on('call', function(call) {
 		canvas.width = video.clientWidth;
 		canvas.height = video.clientHeight;
 		context.drawImage(video,0,0);
+		canvas.style.display = "block";
 	}
 	</script>
 	</div>
