--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -18,7 +18,7 @@ background-color: black;
 #canvas{
 position: absolute;
 width: 320px;
-background-color: black;
+background-color: white;
 left: 0px;
 top: 0px;
 display: none;
