--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -12,7 +12,8 @@ width: 100%;
 background-color: black;
 }
 #toolbar{
-  margin-top: 10px;
+  margin-top: 8px;
+  margin-bottom: 8px;
   background-color: gray;
 }
 #canvas{
