--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -24,7 +24,7 @@ display: none;
 }
 button{
   font-size : 60px;
-  background-color: #4CAF50;
+  background-color: #444444;
   border: none;
   color: black;
   text-align: center;
