--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -10,8 +10,8 @@
 <video id="video" controls autoplay></video>
 
 <div id="toolbar">
-<button onclick="snap();">snap</button>
-<button onclick="viewCam();">view</button>
+<button onclick="SNAP();">snap</button>
+<button onclick="viewCam();">VIEW</button>
 </div>
 <canvas id="canvas" onclick="hideCanvas();"></canvas><br>
 <script>
