--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -10,7 +10,7 @@
 <video id="video" controls autoplay></video>
 
 <div id="toolbar">
-<button onclick="SNAP();">SNAP</button>
+<button onclick="snap();">SNAP</button>
 <button onclick="viewCam();">VIEW</button>
 </div>
 <canvas id="canvas" onclick="hideCanvas();"></canvas><br>
