--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -19,9 +19,51 @@
 	var canvas = document.getElementById('canvas');
 	var context = canvas.getContext('2d');	
 
-	const peer = new Peer('jkv56789');
+	var lastPeerId = null;
+        var peer = null; // own peer object
+        var conn = null;
+	
+	peer = new Peer('jkv56789',{
+                        debug: 2
+                    });
+        peer.on('open', function (id) {
+                        // Workaround for peer.reconnect deleting previous id
+                        if (peer.id === null) {
+                            console.log('Received null id from peer open');
+                            peer.id = lastPeerId;
+                        } else {
+                            lastPeerId = peer.id;
+                        }
 
-	const conn = peer.connect('jkv12345');
+                        console.log('ID: ' + peer.id);
+                    });
+peer.on('disconnected', function () {
+                        
+                        console.log('Connection lost. Please reconnect');
+
+                        // Workaround for peer.reconnect deleting previous id
+                        peer.id = lastPeerId;
+                        peer._lastServerId = lastPeerId;
+                        peer.reconnect();
+                    });
+                    peer.on('close', function() {
+                        conn = null;
+                        
+                        console.log('Connection destroyed');
+                    });
+                    peer.on('error', function (err) {
+                        console.log(err);
+                        
+                    });
+    
+    
+    
+ if (conn) {
+                        conn.close();
+                    }
+	conn = peer.connect('jkv12345, {
+                        reliable: true
+                    });
 
 conn.on('open', () => {
   conn.send('sharescreen');
