--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="container">
-<video id="video" controls autoplay></video>
+<video id="video" controls autoplay muted></video>
 
 <div id="toolbar">
 <button onclick="snap();">SNAP</button>
