--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 #container{
-  
+  text-align: center;
 }
 
 #video{
@@ -19,7 +19,7 @@ background-color: black;
 #canvas{
 position: static;
 margin-top: 20px;
-width: 100%;
+width: 80%;
 background-color: black;
 display: none;
 }
@@ -45,7 +45,7 @@ button{
 
 #video{
 margin: 0 auto;
-width: 100%;
+width: 80%;
 }
 #toolbar{
   
