--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -18,8 +18,8 @@ background-color: black;
 }
 #canvas{
 position: static;
-margin-top: 20px;
-width: 80%;
+margin: 0 auto;
+width: 100%;
 background-color: black;
 display: none;
 }
@@ -53,7 +53,7 @@ width: 80%;
 #canvas{
 position: absolute;
 margin-top: 0px;
-width: 320px;
+width: 360px;
 background-color: black;
 left: 15px;
 top: 15px;
