--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AI CAM VIEWER</title>
+    <title>AI CAM VIEWER</title>
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel=”apple-touch-icon” sizes=”152×152″ href=”myicon.png”/>
 </head>
 <body>
 	<div id="container">
