--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -27,7 +27,7 @@ button{
   font-size : 60px;
   background-color: #dfdfdf;
   border: none;
-  color: black;
+  color: green;
   text-align: center;
   text-decoration: none;
   display: inline-block;
