--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -14,7 +14,7 @@ background-color: black;
 #toolbar{
   margin-top: 8px;
   margin-bottom: 8px;
-  background-color: white;
+  background-color: black;
 }
 #canvas{
 position: static;
