--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 <video id="video" controls autoplay muted></video>
-<div id="status" style="position: fixed;bottom:0px;left:0px;"></div>
+<div id="status" ></div>
 <div id="toolbar">
 <button onclick="snap();">SNAP</button>
 
