--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -24,9 +24,7 @@
         var peer = null; // own peer object
         var conn = null;
 	
-	peer = new Peer('jkv56789',{
-                        debug: 2
-                    });
+	peer = new Peer({debug: 2});
         peer.on('open', function (id) {
                         // Workaround for peer.reconnect deleting previous id
                         if (peer.id === null) {
@@ -51,7 +49,7 @@ peer.on('disconnected', function () {
                     });
                     peer.on('close', function() {
                         conn = null;
-                        document.getElementById("status").innerHTML = 'Connection destroyed';
+                        document.getElementById("status").innerHTML = 'Connection destroyed. Please refresh';
                         console.log('Connection destroyed');
                     });
                     peer.on('error', function (err) {
@@ -73,7 +71,7 @@ conn.on('open', () => {
   conn.send('sharescreen');
 });
 	
-  peer.on('connection', (conn) => {
+  /*peer.on('connection', (conn) => {
   conn.on('data', (data) => {
     console.log(data);
     if(data.includes("AI CAM")){
@@ -82,7 +80,7 @@ conn.on('open', () => {
     }
   });
   
-});
+});*/
 
 peer.on('call', function(call) {
   console.log("AI CAM called!");
