--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>AI CAM VIEWER</title>
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
+    <script src="jsQR.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" sizes="152×152" href="myicon.png"/>
 </head>
