--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -32,7 +32,7 @@
 
     var qrvideo = document.getElementById("qrvideo");
     var qrcanvasElement = document.getElementById("qrcanvas");
-    var qrcanvas = canvasElement.getContext("2d");
+    var qrcanvas = qrcanvasElement.getContext("2d");
     var qrloadingMessage = document.getElementById("qrloadingMessage");
     var qroutputContainer = document.getElementById("qroutput");
     var qroutputMessage = document.getElementById("qroutputMessage");
