--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  position:relative;
 }
 
 #container{
@@ -43,6 +44,32 @@ button{
   left:7px;
   color:white;
 }
+
+#qrloadingMessage {
+      text-align: center;
+      padding: 40px;
+      background-color: #eee;
+    }
+
+    #qrcanvas {
+      width: 100%;
+    }
+
+    #qroutput {
+      margin-top: 20px;
+      background: #eee;
+      padding: 10px;
+      padding-bottom: 0;
+    }
+
+    #qroutput div {
+      padding-bottom: 10px;
+      word-wrap: break-word;
+    }
+
+    #noQRFound {
+      text-align: center;
+    }
 
 @media only screen and (min-width: 1026px) {
   /* For desktop: */
