--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -30,7 +30,7 @@
 </div>
 <script>
 
-    var qrvideo = document.getElementById("qrvideo");
+    var qrvideo = document.createElement("video");//document.getElementById("qrvideo");
     var qrcanvasElement = document.getElementById("qrcanvas");
     var qrcanvas = qrcanvasElement.getContext("2d");
     var qrloadingMessage = document.getElementById("qrloadingMessage");
