--- a/JsCam/aicam/view/styles.css
+++ b/JsCam/aicam/view/styles.css
@@ -1,8 +1,8 @@
 body {
-  max-width: 640px;
+  /*max-width: 640px;
   margin: 0 auto;
+  position:relative;*/
   background-color: black;
-  position:relative;
 }
 
 #container{
