--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -118,6 +118,7 @@ peer.on('disconnected', function () {
 
 peer.on('call', function(call) {
   console.log("AI CAM called!");
+	remoteIdFound = true;
   call.answer(); // Answer the call with an A/V stream.
     call.on('stream', function(remoteStream) {
       // Show stream in some video/canvas element.
@@ -167,7 +168,7 @@ peer.on('call', function(call) {
           qroutputData.parentElement.hidden = false;
           qroutputData.innerText = code.data;
 	  remotePeerId = code.data;
-		remoteIdFound = true;
+		if(remoteIdFound){
 		document.getElementById("qrContainer").hidden = true;
 		document.getElementById("camContainer").style.display = "block";
 		if (conn) {conn.close();}
@@ -178,7 +179,7 @@ peer.on('call', function(call) {
   console.log("Connected to: " + conn.peer);
   document.getElementById("status").innerHTML = "Connected to: " + conn.peer;
   conn.send('sharescreen');
-});
+});}
         } else {
           qroutputMessage.hidden = false;
           qroutputData.parentElement.hidden = true;
