--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -117,8 +117,8 @@ peer.on('disconnected', function () {
   //remotePeerId = code.data;
   conn.send('sharescreen');
   //remoteIdFound = true;
-  //document.getElementById("qrContainer").hidden = true;
-  //document.getElementById("camContainer").style.display = "block";
+  document.getElementById("qrContainer").hidden = true;
+  document.getElementById("camContainer").style.display = "block";
 });
         
 
