--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -47,9 +47,9 @@
       qrcanvas.strokeStyle = color;
       qrcanvas.stroke();
     }
-	if(getParameterByName("remoteid",window.location.href)){
+	if(getParameterByName("rcid",window.location.href)){
     remoteIdFound = true;
-    remotePeerId = getParameterByName("remoteid",window.location.href)
+    remotePeerId = getParameterByName("rcid",window.location.href)
     }else{   
      remoteIdFound = false;
     }
@@ -205,7 +205,7 @@ peer.on('call', function(call) {
 		conn.on('open', () => {
   console.log("Connected to: " + conn.peer);
   document.getElementById("status").innerHTML = "Connected to: " + conn.peer;
-  window.history.pushState("", "", "/JsCam/aicam/view?remoteid="+conn.peer);
+  window.history.pushState("", "", "/JsCam/aicam/view?rcid="+conn.peer);
   remotePeerId = code.data;
   conn.send('sharescreen');
   remoteIdFound = true;
