--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>AI CAM VIEWER</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
     <script src="jsQR.js"></script>
     <link rel="stylesheet" href="styles.css">
