--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -29,7 +29,7 @@ button{
   color: black;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {/*768 and bigger*/
   /* For desktop: */
   body {
   
