--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -14,7 +14,7 @@ h1{
 
 }
 #toolbar{
-  
+}
 #canvas{
 
 }
@@ -28,7 +28,7 @@ button{
   color: black;
 }
 
-@media screen and (min-width: 468px) {/*768 and bigger*/
+@media screen and (min-width: 768px) {/*768 and bigger*/
   /* For desktop: */
   body {
   
