--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -61,15 +61,20 @@ button{
   
 }
 
-#container{
-}
 h1{
   position: fixed;
   color:black;
   top: 90px;
   left:115px;
 }
-
+#recordingcanvas{
+  position: fixed;
+  top:247px;
+  right: 115px;
+  background:black;
+  width: 720px; 
+  height: 405px; 
+}
 #root video, #root canvas{
   top: 150px;
   left:115px;
@@ -88,12 +93,6 @@ h1{
   right:115px;
   background:white;
   display:none;
-}
-#canvas{
-
-}
-button{
-  
 }
 #status{
   position: fixed;
