--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -6,7 +6,8 @@ h1{
   position: fixed;
   color:black;
   top: 90px;
-  left:7px;
+  left:115px;
+  right: auto;
   
 }
 #container{
@@ -67,6 +68,7 @@ h1{
   color:black;
   top: 90px;
   left:115px;
+  right: auto;
 }
 #recordingcanvas{
   position: fixed;
@@ -100,7 +102,7 @@ h1{
 #status{
   position: fixed;
   bottom: 0px;
-  left: 115px;
+  left: 7px;
   color: black;
 } 
   
