--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -140,7 +140,7 @@ peer.on('call', function(call) {
 	
 	function snap(){
 		canvas.width = video.videoWidth;
-		canvas.height = video.videotHeight;
+		canvas.height = video.videoHeight;
 		context.drawImage(video,0,0);
 		canvas.style.display = "block";
 	}
