--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AI CAM VIEWER</title>
+    <title>QUICK CAM VIEWER</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/peerjs@0.3.20/dist/peer.min.js"></script>
     <script src="jsQR.js"></script>
