--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -37,7 +37,7 @@ h1{
   width:128px; 
   height:128px;
   top:15px;
-  left: 590px;
+  left: 585px;/*599*/
   right:auto;
   background:white;
   display:none;
