--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -20,7 +20,7 @@
 <canvas id="canvas" onclick="hideCanvas();"></canvas><br>
 </div>
 <div id="qrContainer" >
-  <div id="qrloadingMessage">🎥 Trying to access video stream</div>
+  <div id="qrloadingMessage">🎥 Accessing video stream</div>
   <video id="qrvideo" controls autoplay muted hidden></video>
   <canvas id="qrcanvas" hidden></canvas>
   <div id="qroutput" hidden>
