--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -5,8 +5,8 @@ h1{
   
   position: fixed;
   color:black;
-  top: 30px;/*90*/
-  left:auto;
+  top: 25px;/*90*/
+  left:45px;
   right: auto;
   
 }
