--- a/JsCam/aicam/styles.css
+++ b/JsCam/aicam/styles.css
@@ -15,8 +15,8 @@ h1{
 }
 #recordingcanvas{
   position: fixed;
-  top:auto;/*740*/
-  bottom:0px;
+  top:740;/*740*/
+  bottom: auto;
   left: 0px;
   background:black;
   width: 720px; 
@@ -25,7 +25,7 @@ h1{
 #root video, #root canvas{
   position: fixed;
   top: 95px;/*150*/
-  left:7px;
+  left:0px;
 }
 #objectdetection{
   position: fixed;
@@ -37,8 +37,8 @@ h1{
   position:fixed;
   width:128px; 
   height:128px;
-  top:95px;/*15px*/
-  left: 570px;/*599 585*/
+  top:15px;/*15px*/
+  left: 585px;/*599 585*/
   right:auto;
   background:white;
   display:none;
